# rust-with-python

./: .gitignore  Makefile  README.md
data-conversion/: Cargo.toml  Makefile  convert.py  pyproject.toml
data-conversion/src/: lib.rs
digits-pi/: Cargo.toml  Makefile  README.md  pi.py  pyproject.toml
digits-pi/src/: lib.rs
marco-python/: Cargo.toml  Makefile
marco-python-cli/: Cargo.toml  Makefile
marco-python-cli/src/: lib.rs  main.rs
marco-python/src/: main.rs
ownership-pyrust/: Cargo.toml  Makefile  owner.py  pyproject.toml
ownership-pyrust/src/: lib.rs
polars-cli/: Cargo.toml  Makefile  index.html
polars-cli/benches/: my_benchmark.rs
polars-cli/src/: lib.rs  main.rs
polars-cli/tests/: integration_tests.rs
polars-python-rust/: Cargo.toml  Makefile  README.md  pandas-demo.py  polars-demo.py  requirements.txt
polars-python-rust/src/: main.rs
pycalc-cli/: Cargo.toml  Makefile  calc.py  pyproject.toml
pycalc-cli/src/: lib.rs
pycall/: .gitignore  Cargo.toml  pyproject.toml
pycall/src/: main.rs
pyo3-example/: Cargo.toml  pyproject.toml
pyo3-example/src/: lib.rs
rust-exceptions/: Cargo.toml  Makefile  pydiv.py  pyproject.toml
rust-exceptions/src/: lib.rs
