[package]
name = "polars-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.22", features = ["derive"] }
polars = { version = "0.32.1", features = ["lazy"] }
criterion = "0.5"

[[bench]]
name = "my_benchmark"
harness = false